Version 2.14 ->
--------------------
 - improved JCC build on Linux by mokey patching setuptools (Caleb Burns)
 - fixed bug with wrapping arrays coming out of generic iterators
 - added support for wrapping non-public methods by listing them as class:method
 - 

Version 2.13 -> 2.14
--------------------
 - fixed class initialization race bug PYLUCENE-17 (with Patrick J. McNerthney)
 - added support for initVM's vmargs to be a [list, of, args], PYLUCENE-19
 - added support for using full Java class names in Python via --use_full_names
 - fixed bug PYLUCENE-20 (Roman Chyla)

Version 2.12 -> 2.13
--------------------
 - fixed bug with name collision between method and static field of same name
 - added --maxheap, --egg-info and --extra-setup-arg parameters (Chris Wilson)
 - added check for duplicate class names in generated Python module
 - updated setuptools patch logic to accomodate new 0.6.15 and up fork
 - fixed issues with with arrays as generics parameters (openjdk 7)
 - added support for auto-boxing primitive types when converting to object array
 - fixed bug with setting a string into an object array
 - fixed bug with decref'ing too early when converting a sequence to an array

Version 2.11 -> 2.12
--------------------
 - fixed slice operation bug on JArray (int vs Py_ssize_t on 64-bit systems)
 - fixed bug in argument parsing not detecting soon enough incorrect num args
 - fixed bug in JArray(type) function decref'ing type_name too soon

Version 2.10 -> 2.11
--------------------
 - improved recovery from toString() failure, displaying class name instead
 - non public classes listed on command line now wrapped (Lukasz Jancewicz)
 - fixed bug with generating wrappers for unimplemented interface methods
 - fixed bug with generating propMethods for void getters
 - fixed bug with missing code for returning arrays from iterators

Version 2.9 -> 2.10
-------------------
 - added javadoc for org.apache.jcc.PythonVM class (Bill Janssen)